# transientAbsorptionAnalyzer

./: .gitignore  README.md  TransientAbsorptionAnalyser.spec  build.bat  build_simple.bat  clean.bat  pyproject.toml  requirements.txt  run.bat
transient_absorption_analyser/src/: main.py
transient_absorption_analyser/src/core/: data_processor.py  export_manager.py
transient_absorption_analyser/src/ui/: main_window.py  plot_widget.py
transient_absorption_analyser/src/ui/tabs/: intensity_tab.py  load_tab.py  spectrum_tab.py
