[tool.poetry]
name = "transient-absorption-analyser"
version = "0.1.0"
description = "A Python application for analyzing transient absorption spectroscopy data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "transient_absorption_analyser", from = "."}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "^6.6.1"
numpy = "^1.26.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pyinstaller = "^6.12.0"
pillow = "^11.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyzer = "transient_absorption_analyser.src.main:main" 